# ExaML

./: Makefile  Makefile.am  README.md  configure  configure.ac  testCall.sh
examl/: Makefile.AVX.gcc  Makefile.SSE3.gcc  Makefile.version  avxLikelihood.c  axml.c  axml.h  bayes.c  bipartitionList.c  config.h  cycle.h  evaluateGenericSpecial.c  evaluatePartialGenericSpecial.c  faultTolerance.c  faultTolerance.h  genericData.c  genericData.h  globalVariables.h  makenewzGenericSpecial.c  models.c  newviewGenericSpecial.c  optimizeModel.c  restartHashTable.c  searchAlgo.c  thread.c  thread.h  topologies.c  trash.c  tree.c  tree.h  treeIO.c  version.h
system/: Makefile.build  Makefile.standard
utils/: debug.sh  defaultRun.sh  determineLNLs.sh  testCall.sh  testCallHybrid.sh  verifyDataset.sh
